kube/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasker-backend
  namespace: tasker
  annotations:
    cert-gen.name: tasker-cert
    cert-gen.namespace: tasker
    cert-gen.dnsNames: "tasker.jonasburster.de,www.tasker.jonasburster.de"
    cert-gen.issuer.name: letsencrypt-prod
    cert-gen.issuer.kind: ClusterIssuer
spec:
  ports:
  - port: 80
    name: http
    targetPort: tasker-backend
  selector:
    app: tasker-backend
